--- a/templates/post.html
+++ b/templates/post.html
@@ -36,6 +36,37 @@
   <div>
     {{ post.content | safe }}
   </div>
+  
+  <!-- GUERILLA SHARING SECTION -->
+  <div class="share-section">
+    <h3>Share This Guerilla Knowledge!</h3>
+    <div class="share-buttons">
+      <a href="https://www.reddit.com/submit?url=https://gorillacamping.site/blog/{{ post.slug }}&title={{ post.title | urlencode }}" 
+         class="share-btn reddit" 
+         target="_blank" 
+         rel="noopener"
+         onclick="trackSocialClick('reddit', 'post_share')">
+        Share on Reddit
+      </a>
+      
+      <a href="https://www.facebook.com/sharer/sharer.php?u=https://gorillacamping.site/blog/{{ post.slug }}" 
+         class="share-btn facebook" 
+         target="_blank" 
+         rel="noopener"
+         onclick="trackSocialClick('facebook', 'post_share')">
+        Share on Facebook
+      </a>
+      
+      <a href="https://www.tiktok.com/foryou?share_url=https://gorillacamping.site/blog/{{ post.slug }}" 
+         class="share-btn tiktok" 
+         target="_blank" 
+         rel="noopener"
+         onclick="trackSocialClick('tiktok', 'post_share')">
+        Share on TikTok
+      </a>
+    </div>
+  </div>
+  
   <p><a href="{{ url_for('blog') }}">← Back to blog</a></p>
 </article>
 
@@ -48,4 +79,3 @@
   </ul>
 </section>
 {% endblock %}
-
