--- a/templates/base.html
+++ b/templates/base.html
@@ -177,6 +177,7 @@
             <p>&copy; 2025 Gorilla Camping. All Rights Reserved.</p>
             <p class="disclaimer">
                 Guerilla-style affiliate marketing. Some links may earn us a small commission at no extra cost to you. 
+                <a href="/as-is" class="footer-link">AS-IS Terms</a> | 
                 <a href="/privacy" class="footer-link">Privacy Policy</a> | 
                 <a href="/contact" class="footer-link">Contact</a>
             </p>
