--- a/templates/base.html
+++ b/templates/base.html
@@ -250,4 +250,8 @@ gtag('config', 'YOUR-GA4-ID');
         });
     </script>
 </body>
+    <div id="consent-banner" style="position:fixed;bottom:0;width:100%;background:#111;color:#00ff88;padding:1rem;z-index:9999;display:none;text-align:center;">
+    <p>We use cookies for analytics. <button onclick="acceptAll()">Accept All</button> <button onclick="rejectAll()">Reject All</button></p>
+</div>
+
 </html>
