--- a/templates/base.html
+++ b/templates/base.html
@@ -58,15 +58,16 @@
     </script>
 
     {% block extra_head %}{% endblock %}
-
-    <!-- Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-TE4BHZ89TL"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'G-TE4BHZ89TL');
       
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-JPKKPRXX6S"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-JPKKPRXX6S');
+     
+
       // Enhanced affiliate tracking
       function trackAffiliateClick(affiliateUrl, productName) {
         gtag('event', 'affiliate_click', {
