--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-TE4BHZ89TL');
+  gtag('config', 'G-JPKKPRXX6S');
 </script>
     <head>
     <meta charset="UTF-8" />
